salesforce_sfdx/main/default/objects/Benefit_Discussed__c/Benefit_Discussed__c.object-meta.xml
<CustomObject>
    <label>Benefit Discussed</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Benefit Discussed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits Discussed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>