salesforce_sfdx/main/default/objects/Benefit_Discussed__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Benefits Discussed</relationshipLabel>
    <relationshipName>Benefits_Discussed</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>