salesforce_sfdx/main/default/objects/Benefit_Discussed__c/fields/Code_Set__c.field-meta.xml
<CustomField>
    <fullName>Code_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Code Set</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Benefits Discussed</relationshipLabel>
    <relationshipName>Benefits_Discussed</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>