salesforce_sfdx/main/default/objects/Benefit_Discussed__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <formula>Code_Set__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Description</label>
    <type>Text</type>
</CustomField>